Use class.getDeclaredConstructor().newInstance() to replace deprecated class.newInstance()